# advent-of-code-2024

./: .pre-commit-config.yaml  CMakeLists.txt
1day/: 1day.cpp  1day.in.h  CMakeLists.txt
2day/: 2day.cpp  2day.in.h  CMakeLists.txt
3day/: 3day.cpp  3day.in.h  CMakeLists.txt
4day/: 4day.cpp  4day.in.h  CMakeLists.txt
5day/: 5day.cpp  5day.in.h  CMakeLists.txt
6day/: 6day.cpp  6day.in.h  CMakeLists.txt
